@@ -16,13 +16,13 @@ my @delete = ();
 open(INFILE, "$ARGV[0]");
 foreach $line (<INFILE>)
 {
-	if($line =~ /\|/)
-	{
-		chomp $line;
-		($md5, $name, $other) = split (/\|/, $line);
-		$key = $name . ".png";
-		$builtin{$key} = $key;
-	}
+  if($line =~ /\|/)
+  {
+    chomp $line;
+    ($md5, $name, $other) = split (/\|/, $line);
+    $key = $name . ".png";
+    $builtin{$key} = $key;
+  }
 }
 close(INFILE);
 
@@ -33,64 +33,64 @@ my @files = grep !/^\.\.?$/, readdir SNAPDIR;
 close(SNAPDIR);
 foreach $file (@files)
 {
-	($base,$path,$type) = fileparse($file);
-	$directory{$base} = $base;
+  ($base,$path,$type) = fileparse($file);
+  $directory{$base} = $base;
 }
 
 # All files in %builtin but not in %directory are 'missing' snapshots
 while(($key, $value) = each(%builtin))
 {
-	if(!defined $directory{$key})
-	{
-		push(@missing, $key);
-	}
+  if(!defined $directory{$key})
+  {
+    push(@missing, $key);
+  }
 }
 
 # All files in %directory but not in %builtin are redundant, and should be deleted
 while(($key, $value) = each(%directory))
 {
-	if(!defined $builtin{$key})
-	{
-		$file = $ARGV[1] . "/" . $key;
-		push(@delete, $file);
-	}
+  if(!defined $builtin{$key})
+  {
+    $file = $ARGV[1] . "/" . $key;
+    push(@delete, $file);
+  }
 }
 
 $size = @missing;
 print "Missing snapshots: ($size)\n\n";
 if($size > 0)
 {
-	@missing = sort(@missing);
-	foreach $file (@missing)
-	{
-		print "$file\n";
-	}
+  @missing = sort(@missing);
+  foreach $file (@missing)
+  {
+    print "$file\n";
+  }
 }
 
 $size = @delete;
 print "\n\nExtra snapshots: ($size)\n\n";
 if($size > 0)
 {
-	@delete = sort(@delete);
-	foreach $file (@delete)
-	{
-		print "$file\n";
-	}
+  @delete = sort(@delete);
+  foreach $file (@delete)
+  {
+    print "$file\n";
+  }
 
-	print "\nDelete extra snapshots [yN]: ";
-	chomp ($input = <STDIN>);
-	if($input eq 'y')
-	{ 
-		foreach $file (@delete)
-		{
-			$cmd = "rm \"$file\"";
-			system($cmd);
-		}
-	}
+  print "\nDelete extra snapshots [yN]: ";
+  chomp ($input = <STDIN>);
+  if($input eq 'y')
+  { 
+    foreach $file (@delete)
+    {
+      $cmd = "rm \"$file\"";
+      system($cmd);
+    }
+  }
 }
 
 
 sub usage {
-	print "prune_snapshots.pl [listrominfo data] [snapshot dir]\n";
-	exit(0);
+  print "prune_snapshots.pl [listrominfo data] [snapshot dir]\n";
+  exit(0);
 }
